# scraper

./: .gitignore  README.md  pyproject.toml  scraper.py  test_scraper.py
.github/workflows/: python-app.yml
output/: player_salaries.csv
